tests/kyverno-policies/add-ingress-class-name/resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-pass
  namespace: paas
spec:
  rules:
  - host: web.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skip
  namespace: webservice
spec:
  rules:
  - host: foo.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
