tests/kyverno-policies/add-ingress-class-name/test-paas-ingress-mutated.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-pass
  namespace: paas
spec:
  ingressClassName: nginx
  rules:
  - host: web.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
