tests/kyverno-policies/add-ingress-class-name/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-ingress-class-name
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-ingress-class-name
    rule: add-ingress-class-name
    resources:
      - paas/paas-pass
    patchedResources: test-paas-ingress-mutated.yaml
    kind: Ingress
    result: pass
  - policy: add-ingress-class-name
    rule: add-ingress-class-name
    resources:
      - webservice/skip
    kind: Ingress
    result: skip
